--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -3,6 +3,7 @@
 <head>
     <title>Title of the document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
@@ -26,6 +27,14 @@
         color: #555;
     }
 
+    #navbarSupportedContent{
+        justify-content: space-between;
+    }
+
+    .loginLink{
+        list-style-type: none;
+    }
+
 </style>
 </head>
 <body>
@@ -34,11 +43,23 @@
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active"><a href="#" class="nav-link font-italic"> Home </a></li>
-                <li class="nav-item active"><a href="#" class="nav-link font-italic"> About </a></li>
+                <li class="nav-item active"><a href="/" class="nav-link font-italic"> Home </a></li>
+                <li class="nav-item active"><a href="/aboutUs" class="nav-link font-italic"> About </a></li>
                 <li class="nav-item active"><a href="#" class="nav-link font-italic"> Services </a></li>
                 <li class="nav-item active"><a href="#" class="nav-link font-italic"> Contact</a></li>
             </ul>
+            <div class="loginLink">
+            <% if(!isLogin){ %>
+                <li><a href="/loginPage" >LOG IN</a></li>
+                <% } else { %>
+                
+                    <li>Hi, <%= user %></li>
+
+                    <li>
+                        <a href="/loginPage">LOG OUT</a>
+                    </li>
+                    <% } %>
+                </div>
         </div>
     </div>
 </nav>
