--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -32,21 +32,64 @@
     }
 
 
-    footer {
+    /* footer {
     position: fixed;
   width: 100%;
   bottom: 10px;
 
-}
+} */
 
 #homeP{
     text-align: center;
     position: relative;
-    top:150px
+    top:50px
 }
 
 .loginLink{
 list-style-type: none;
+}
+
+#productHeader{
+    text-align:center;
+}
+
+.product{
+    display: flex;
+
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+
+img{
+    width: 300px;
+    height: 250px;
+}
+
+.price {
+  color: grey;
+  font-size: 22px;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  padding: 12px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.card button:hover {
+  opacity: 0.7;
 }
 
 </style>
@@ -59,9 +102,9 @@ list-style-type: none;
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active"><a href="/" class="nav-link font-italic"> <b>Home</b> </a></li>
                 <li class="nav-item active"><a href="/shop" class="nav-link font-italic"> Shop </a></li>
-                <li class="nav-item active"><a href="" class="nav-link font-italic"> Services </a></li>
+                <li class="nav-item active"><a href="#" class="nav-link font-italic"> Services </a></li>
                 <li class="nav-item active"><a href="/aboutUs" class="nav-link font-italic"> About </a></li>
-                <li class="nav-item active"><a href="" class="nav-link font-italic"> Contact</a></li>
+                <li class="nav-item active"><a href="#" class="nav-link font-italic"> Contact</a></li>
             </ul>
             <div class="loginLink">
             <% if(!isLogin){ %>
@@ -80,20 +123,46 @@ list-style-type: none;
 </nav>
 
 
+<h1 id="productHeader">Local Produce in BC</h1>
 <section id="homeP">
-    <h1>HomePage</h1>
+<div class="product">
+<div class="card">
+  <img src="https://media.istockphoto.com/photos/jar-of-honey-with-honeycomb-picture-id520733611?k=20&m=520733611&s=612x612&w=0&h=bEtg2Pykf6cLHGckYZq5Ej0zp82F05E0haIDjDTsCwg=" alt="honey" >
+  <h2>Oganic Honey</h2>
+  <p class="price">$10.99</p>
+  <p>Some text about the honey lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+  <p><button>Add to Cart</button></p>
+</div>
+
+<div class="card">
+    <img src="https://cdn.shopify.com/s/files/1/2493/4696/products/11_12_18-TerreBleu-16Bundles_1080x.jpg?v=1643922171" alt="honey" >
+    <h2>Lavender</h2>
+    <p class="price">$10.99</p>
+    <p>Some text about the Lavender lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+    <p><button>Add to Cart</button></p>
+  </div>
+
+  <div class="card">
+    <img src="https://packageinspiration.com/wp-content/uploads/2014/04/Fruit-Farm-Organic-Jams9.jpg" alt="honey" >
+    <h2>Raspberry Jam</h2>
+    <p class="price">$7.99</p>
+    <p>Some text about the Raspberry Jam lorem ipsum lorem jeansum. Lorem jeamsun denim lorem jeansum.</p>
+    <p><button>Add to Cart</button></p>
+  </div>
+
+</div>
 </section>
 
 
 
 
-<footer class="bg-light pb-5">
+
+</body>
+<!-- <footer class="bg-light pb-5">
     <div class="container text-center">
         <p class="font-italic text-muted mb-0">&copy; Copyrights Company.com All rights reserved.</p>
     </div>
-</footer>
-</body>
-
+</footer> -->
 
 
 </html>
